src/test/ui/error-codes/E0565-2.stderr
error[E0565]: unsupported literal
  --> $DIR/E0565-2.rs:12:22
   |
LL | #[deprecated(since = b"1.29", note = "hi")] //~ ERROR E0565
   |                      ^^^^^^^ help: consider removing the prefix: `"1.29"`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0565`.
